<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="30sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/app_name"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="30dp">
        <EditText
            android:id="@+id/e1"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>
        <EditText
            android:id="@+id/e2"
            android:layout_width="150dp"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/b11"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/showToast"
            android:onClick="ShowToast"/>
        <Button
            android:id="@+id/b12"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/showToast2"
            android:onClick="ShowToast2"/>
        <Button
            android:id="@+id/b13"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/showToast3"
            android:onClick="ShowToastWithPicture"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
        <Button
            android:id="@+id/b21"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/zad4"
            android:onClick="startAct4"/>
        <Button
            android:id="@+id/b22"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/zad5"
            android:onClick="startAct4"/>
        <Button
            android:id="@+id/b23"
            android:layout_width="115dp"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:text="@string/zad6"
            android:onClick="startAct4"/>
    </LinearLayout>
</LinearLayout>